Cycles smoke adaptive domain visibility #39804

Closed
opened 2014-04-20 12:24:51 +02:00 by matthieu barbie · 10 comments

System Information
Windows 7 X64, dual Zotac Geforce GTX 670 4 Gb

Blender Version
Broken: 2.70, Hash : 4ed16bc
Worked: (optional)

Short description of error
When using smoke adaptive domain with Cycles in closed area, I can see during animation that the adaptive domain is visible as occlusion on the walls.
Here a picture of the effect bug :
http://matthieubarbie.files.wordpress.com/2014/04/capture.png
http://matthieubarbie.files.wordpress.com/2014/04/cycles_fluids-0047.png

Exact steps for others to reproduce the error
The file without smoke cache : https://docs.google.com/file/d/0B2ylYG5fzOLLR0RNWV9Bc01jd3c/edit

**System Information** Windows 7 X64, dual Zotac Geforce GTX 670 4 Gb **Blender Version** Broken: 2.70, Hash : 4ed16bc Worked: (optional) **Short description of error** When using smoke adaptive domain with Cycles in closed area, I can see during animation that the adaptive domain is visible as occlusion on the walls. Here a picture of the effect bug : http://matthieubarbie.files.wordpress.com/2014/04/capture.png http://matthieubarbie.files.wordpress.com/2014/04/cycles_fluids-0047.png **Exact steps for others to reproduce the error** The file without smoke cache : https://docs.google.com/file/d/0B2ylYG5fzOLLR0RNWV9Bc01jd3c/edit

Changed status to: 'Open'

Changed status to: 'Open'
matthieu barbie self-assigned this 2014-04-20 12:24:51 +02:00

Added subscriber: @matthieubarbie

Added subscriber: @matthieubarbie

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Added subscriber: @brecht

Added subscriber: @brecht

The problem comes from the wall behind the domain using a different random number pattern. If you take more samples to lower the noise, the problem should go away.

We could try to avoid this problem by not increasing rng_offset when we go through fully transparent surfaces and volumes, though it will still be a problem with partially transparent cases which is what you have with smoke. Using correlated multi jitter should not have this problem but we can't easily make that the default. Not sure how to solve this best yet.

The problem comes from the wall behind the domain using a different random number pattern. If you take more samples to lower the noise, the problem should go away. We could try to avoid this problem by not increasing `rng_offset` when we go through fully transparent surfaces and volumes, though it will still be a problem with partially transparent cases which is what you have with smoke. Using correlated multi jitter should not have this problem but we can't easily make that the default. Not sure how to solve this best yet.

Hi,

Sorry for the delay, I tried the correlated multi jitter, same result. Of course, will try with no adaptative domain or no domain offset to check too. When tested, I'm coming back to you.

Matt

ps : personal question, smoke rendering will be support by branched path tracing and gpu too ? also does Cycles will support stereoscopic rendering ( 2 buffers rendering at the same time with two frame output) ?

Hi, Sorry for the delay, I tried the correlated multi jitter, same result. Of course, will try with no adaptative domain or no domain offset to check too. When tested, I'm coming back to you. Matt ps : personal question, smoke rendering will be support by branched path tracing and gpu too ? also does Cycles will support stereoscopic rendering ( 2 buffers rendering at the same time with two frame output) ?

Hi,

Found something else, stranges shadows with volume with adaptive or no-adaptive domain in last build. Below, a link to the datas need to see the bug and the scene used for that :

https://docs.google.com/file/d/0B2ylYG5fzOLLX2g1RzFLV1BnNDg/edit

Matt

Hi, Found something else, stranges shadows with volume with adaptive or no-adaptive domain in last build. Below, a link to the datas need to see the bug and the scene used for that : https://docs.google.com/file/d/0B2ylYG5fzOLLX2g1RzFLV1BnNDg/edit Matt

This issue was referenced by 0780f5915b

This issue was referenced by 0780f5915b29ab7102bf1cb8bddd54774161d0d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0780f5915b.

Closed by commit 0780f5915b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39804
No description provided.